# data-producer-accessor

./: .env.example  .gitignore  README.md  data_producer.py
data_accessor/: Cargo.toml
data_accessor/src/: main.rs
