[package]
name = "data_accessor"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = "0.7"
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
dotenv = "0.15" # Add dotenv for .env file support
deadpool-postgres = "0.10"